# vessel-tools

./: .gitignore  ProjectHome.md  README.txt
Convert_16-8bit/: CMakeLists.txt  Tumour16_info.out  convert_16-8bit.cpp
Qt/3Dviewer/: 3Dviewer.cpp  3Dviewer.h  CMakeLists.txt  imagewidget.cpp  imagewidget.h  main.cpp  mainwindow.ui
Qt/Am_joiner/: am_joiner.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Am_tiffer/: CMakeLists.txt  am.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notes.txt  tiff.cpp
Qt/Batcher/: batcher.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Brancher/: brancher.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  node_number.txt
Qt/Compresser/: compresser.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Conduit_analyser/: conduit_analyser.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Connecter/: connecter.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Converter_16-8bit/: converter_16-8bit.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Cropper/: cropper.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Cutter/: cutter.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Denoiser/: denoiser.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Dilater/: dilater.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Distancer/: mainwindow.cpp
Qt/Equaliser/: CMakeLists.txt  loess.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  plot.h  set64bitPath.bat  tiff.cpp
Qt/Eroder/: eroder.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Fattener/: fattener.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Fibre_Connecter/: fibre_connecter.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Filler/: filler.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Flooder/: flooder.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Flooder2D/: flooder2D.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/GammaCorrecter/: gammacorrecter.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Holefiller/: holefiller.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Imagetrimmer/: imagetrimmer.cpp  imagetrimmer.h  imagewidget.cpp  imagewidget.h  main.cpp  mainwindow.ui
Qt/Imageviewer/: CMakeLists.txt  HashSet.h  build64.txt  holoborodko_build.docx  imageviewer.cpp  imageviewer.h  imageviewer.pro  imagewidget.cpp  imagewidget.h  main.cpp  mainwindow.ui  runQtCreator64.bat  set64bitPath.bat
Qt/Inverter/: inverter.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Joiner/: joiner.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/L_Distancer/: L_distancer.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Make3Dtiffer/: mainwindow.cpp  mainwindow.h  mainwindow.ui  make3Dtiffer.pro
Qt/Peeler/: mainwindow.cpp  mainwindow.h  mainwindow.ui  peeler.pro
Qt/Peeler2/: mainwindow.cpp  mainwindow.h  mainwindow.ui  peeler2.pro
Qt/Pruner/: mainwindow.cpp  mainwindow.h  mainwindow.ui  pruner.pro
Qt/Tiffquantifier/: CMakeLists.txt  imageviewer.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tiffquantifier.pro  tiffquantify.cpp  tiffquantify.h
SG2tiff/: CMakeLists.txt  SG2tiff.cpp  network.h
am_block/: CMakeLists.txt  am_block.cpp  cmgui.cpp
am_check/: CMakeLists.txt  am_check.cpp  network.h
am_cut/: CMakeLists.txt  am_cut.cpp
am_join/: CMakeLists.txt  am_join.cpp  cmgui.cpp  network.h
am_smooth/: CMakeLists.txt  am_smooth.cpp
boundary/: CMakeLists.txt  boundary.cpp
close/: CMakeLists-unix.txt  CMakeLists.txt  close.cpp
colour/: CMakeLists.txt  colour.cpp
compress/: CMakeLists.txt  compress.cpp
conduit_analyse/: CMakeLists.txt  cmgui.cpp  conduit_analyse-paper2.cpp  conduit_analyse.cpp  network.h
connect/: CMakeLists.txt  connect.cpp
convert/: CMakeLists.txt  convert.cpp
convert_1-255/: CMakeLists.txt  convert_1-255.cpp
count/: CMakeLists.txt  count.cpp
crop/: CMakeLists.txt  crop.cpp
cut/: CMakeLists.txt  cut.cpp
deblob/: CMakeLists.txt  deblob.cpp
denoise/: BinaryMedianImageFilter.cxx  CMakeLists.txt
despeckle/: CMakeLists.txt  despeckle.cpp
dilate/: CMakeLists.txt  dilate.cpp
equalize/: CMakeLists.txt  equalize.cpp
erode/: CMakeLists.txt  erode.cpp
fatten/: CMakeLists.txt  fatten.cpp
fibre_connect/: CMakeLists.txt  fibre_connect.cpp
fill/: CMakeLists.txt  fill.cpp
flood/: CMakeLists.txt  flood.cpp
flood2D/: CMakeLists.txt  flood2D.cpp
gamma/: CMakeLists.txt  gamma.cpp
gcc/: splitpath.cpp
holefill/: CMakeLists.txt  holefill.cpp
hull/: CMakeLists.txt  hull.cpp
invert/: CMakeLists.txt  invert.cpp
join/: CMakeLists.txt  join.cpp
loess/: CMakeLists.txt  loess.cpp  throw.h  varkitversion.h
lymphatic/: lymphatic.f90  main.f90
make3Dtiff/: CMakeLists.txt  make3Dtiff.cxx
maketiff/: CMakeLists.txt  maketiff.cpp
maskcut/: CMakeLists.txt  maskcut.cpp
peel/: CMakeLists.txt  peel.cpp
peel2/: CMakeLists-unix.txt  CMakeLists.txt  ioutils.h  morphutils.h  peel2.cpp
proximity/: main.f90  par_zig_mod.f90
prune/: CMakeLists.txt  amira.cpp  cmgui.cpp  network.h  prune.cpp  prune.h  statistics.cpp
quarter/: CMakeLists.txt  quarter.cpp
reduce/: CMakeLists.txt  amira.cpp  cmgui.cpp  network.h  reduce.cpp  statistics.cpp
scale/: CMakeLists.txt  scale.cpp
select/: CMakeLists.txt  amira.cpp  cmgui.cpp  network.h  select.cpp  statistics.cpp
shortest_path/: CMakeLists.txt  cmgui.cpp  dikbd.c  dikbd_run.c  parser_db.c  shortest_path.cpp  shortest_path.h
showpath/: CMakeLists.txt  showpath.cxx  showpath.h
smooth/: CMakeLists.txt  fastsmth.cpp  smooth.cpp
surface/: CMakeLists.txt  SurfaceExtraction.cxx
thin/: CMakeLists.txt  itkBinaryThinningImageFilter3D.cxx  itkBinaryThinningImageFilter3D.h  thin.cpp
threshold/: CMakeLists.txt  threshold.cpp
topo/: CMakeLists.txt  topo.cpp
topo2/: CMakeLists.txt  cmgui2.cpp  network2.h  topo2.cpp
translate/: CMakeLists.txt  Excel_notes.txt  amira.cpp  cmgui.cpp  network.h  statistics.cpp  translate.cpp  translate.h
uncompress/: CMakeLists.txt  uncompress.cpp
vdistance/: delaunay.f90  vdistance.f90
vdistancef/: vdistance.f90
zoom/: CMakeLists.txt  cmgui.cpp  zoom.cpp
(+135 files in other folders)
