cmake_minimum_required(VERSION 2.8)

# On Visual Studio 8 MS deprecated C. This removes all 1.276E1265 security
# warnings
IF(WIN32)
  IF(NOT BORLAND)
    IF(NOT CYGWIN)
      IF(NOT MINGW)
        IF(NOT ITK_ENABLE_VISUAL_STUDIO_DEPRECATED_C_WARNINGS)
          ADD_DEFINITIONS(
            -D_CRT_FAR_MAPPINGS_NO_DEPRECATE
            -D_CRT_IS_WCTYPE_NO_DEPRECATE
            -D_CRT_MANAGED_FP_NO_DEPRECATE
            -D_CRT_NONSTDC_NO_DEPRECATE
            -D_CRT_SECURE_NO_DEPRECATE
            -D_CRT_SECURE_NO_DEPRECATE_GLOBALS
            -D_CRT_SETERRORMODE_BEEP_SLEEP_NO_DEPRECATE
            -D_CRT_TIME_FUNCTIONS_NO_DEPRECATE
            -D_CRT_VCCLRIT_NO_DEPRECATE
            -D_SCL_SECURE_NO_DEPRECATE
            )
        ENDIF(NOT ITK_ENABLE_VISUAL_STUDIO_DEPRECATED_C_WARNINGS)
      ENDIF(NOT MINGW)
    ENDIF(NOT CYGWIN)
  ENDIF(NOT BORLAND)
ENDIF(WIN32)

include (GenerateExportHeader)

PROJECT(loesslib)

set(PROJECTNAME "loesslib")
SET (LIB_TYPE SHARED)
ADD_LIBRARY(${PROJECTNAME} ${LIB_TYPE} loess.cpp loess.h throw.h varkitversion.h)

GENERATE_EXPORT_HEADER( ${PROJECTNAME}
             BASE_NAME ${PROJECTNAME}
             EXPORT_MACRO_NAME ${PROJECTNAME}_EXPORT
             EXPORT_FILE_NAME ${PROJECTNAME}_Export.h
             STATIC_DEFINE ${PROJECTNAME}_BUILT_AS_STATIC
)

#IF(WIN32)
#ADD_CUSTOM_COMMAND(TARGET ${PROJECTNAME} POST_BUILD COMMAND copy \"$(TargetPath)\" \"../bin/exec\")
#ELSE(WIN32)
#ADD_CUSTOM_COMMAND(TARGET ${PROJECTNAME} POST_BUILD COMMAND cp \"${PROJECTNAME}\" \"../bin/exec\")
#ENDIF(WIN32)


